--- a/templates/data.html
+++ b/templates/data.html
@@ -17,28 +17,28 @@
 </head>
 
 <body>
-    <div class="container pt-5 mt-5">
+    <div class="container pt-5">
 
-        <div id="uptime-card" class="mt-5 mx-5">
+        <div id="uptime-card" class="mt-5">
             <div class="card mt-5 " id="card-666649">
                 <div class="card-body">
-                    <h3 class="mb-5 text-center">Simple-Kmeans-Testing</h3>
+                    <h3 class="mb-5 text-center">Simple-Kmeans-Testing Data</h3>
                     <div class="row mb-4">
-                        <div class="col-6 text-center">
-                            <a class="btn btn-primary" href="/chart">See Chart</a>
-                        </div>
-                        <div class="col-6 text-center">
-                            <a class="btn btn-success" href="/data">See Data</a></div>
+                        {% for table in tables %}
+                        {{titles[loop.index]}}
+                        {{ table|safe }}
+                        {% endfor %}
                     </div>
-                   
+                    <div class="text-center"><a href="/" class="btn btn-warning">Back</a></div>
                 </div>
             </div>
             <div id="footer">
-                <span id="footer-text" class="float-right">Check <a href="https://github.com/UserGhost411/Simple-Kmeans-testing"
+                <span id="footer-text" class="float-right">Check <a
+                        href="https://github.com/UserGhost411/Simple-Kmeans-testing"
                         target="_blank">Repository</a><span>
             </div>
         </div>
-       
+
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -49,6 +49,12 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <script>
+        let data = {{ data| safe }};
+    </script>
+
 </body>
 
 </html>
